tests/errors/type_check/function/return_param_wrong_type_call1.sim
fn f(x: i64, $return: &mut i64) { entry: return }